[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
normalize = true

[project]
name = "python-arango-async"
description = "Async Python Driver for ArangoDB"
authors = [
    {name= "Alexandru Petenchea", email = "alexandru.petenchea@arangodb.com" },
    {name = "Anthony Mahanna", email = "anthony.mahanna@arangodb.com"}
]
maintainers = [
    {name = "Alexandru Petenchea", email = "alexandru.petenchea@arangodb.com"},
    {name = "Anthony Mahanna", email = "anthony.mahanna@arangodb.com"}
]
keywords = ["arangodb", "python", "driver", "async"]
readme = "README.md"
dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.9"

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Typing :: Typed",
]

dependencies = [
    "packaging>=23.1",
    "setuptools>=42",
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "flake8>=4.0.1",
    "isort>=5.10.1",
    "mypy>=0.942",
    "pre-commit>=2.17.0",
    "pytest>=7.1.1",
    "pytest-cov>=3.0.0",
    "sphinx",
    "sphinx_rtd_theme",
    "types-setuptools",
]

[tool.setuptools.package-data]
"arangoasync" = ["py.typed"]

[project.urls]
homepage = "https://github.com/arangodb/python-arango"

[tool.setuptools]
packages = ["arangoasync"]


[tool.pytest.ini_options]
addopts = "-s -vv -p no:warnings"
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "arangoasync/version.py",
    "setup.py",
]

[tool.isort]
profile = "black"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true
